manifests/prod/api-gateway/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway
  namespace: journal--prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    # Use a snippet to conditionally redirect ONLY the root path
    nginx.ingress.kubernetes.io/configuration-snippet: |
       if ($request_uri = /) {
         return 302 /documentation/;
       }
spec:
  rules:
  - host: "api.prod.elifesciences.org"
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway-web
            port:
              number: 80
  tls:
  - secretName: api-gateway-tls
    hosts:
    - "api.prod.elifesciences.org"
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-gateway-ping
  namespace: journal--prod
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      return 200 "pong";
spec:
  rules:
  - host: "api.prod.elifesciences.org"
    http:
      paths:
      - path: /ping
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway-web
            port:
              number: 80
      - path: /ping-fastly
        pathType: ImplementationSpecific
        backend:
          service:
            name: api-gateway-web
            port:
              number: 80
